# noise-exp

./: .gitignore  pyproject.toml  readme.md
noise_exp/: gui.enaml  main.py
noise_exp/config/io/: coati.enaml  util.py
noise_exp/paradigms/: __init__.py  noise_exposure.enaml
